--- a/sass/global.scss
+++ b/sass/global.scss
@@ -12,7 +12,7 @@ body {
   left: 0;
   right: 0;
   z-index: 2;
-  background: rgba(#222222, 0.98);
+  background: rgba(#aaa, 0.98);
 }
 
 .photo-stream {
